[package]
name = "formula_blue"
version = "0.1.0"
authors = ["Tobias de Bruijn <github@thedutchmc.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
colored = "2.0.0"
chrono = "0.4.19"
anyhow = "1.0.51"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.30"
time = "0.3.5"