[package]
name = "formula_blue"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2021"

[dependencies]
serde_json = "1.0.64"
colored = "2.0.0"
chrono = "0.4.19"
anyhow = "1.0.51"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.30"
time = "0.3.5"
toml = "0.5.8"
crossbeam-utils = "0.8.7"

[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]